PECOBLR-1121 Move profile from parent -> jdbc-core.